# mcp-quickstart

./: .gitignore  README.md
1-hello-world/: main.py  pyproject.toml
1-hello-world/sse/: client.py  server.py
1-hello-world/stdio/: client.py  server.py
1-hello-world/streamable-http/: client.py
2-calculator/: pyproject.toml
2-calculator/stdio/: server.py
2-calculator/streamable-http/: client.py
3-inventory-management/: client.py  main.py  pyproject.toml  server.py
3-inventory-management/archive/Introduction_to_agents/: simple_agent.py  tools.py
3-inventory-management/http/: server.py
3-inventory-management/http/prompts/: greeting_message.py
3-inventory-management/http/resources/: company_details.py  inventory_metadata.py  item_catalog.py
3-inventory-management/http/tools/: __init__.py  create_item.py  delete_item.py  get_inventory_stats.py  list_items.py  read_item.py  state.py  update_item.py
3-inventory-management/prompts/: __init__.py  greeting_message.py
3-inventory-management/resources/: __init__.py  catalog.py  company_details.py  inventory_metadata.py  item_catalog.py
3-inventory-management/tools/: create_item.py  get_inventory_stats.py  read_item.py  update_item.py
services/1-hello-world/stdio/: client.py  server.py
services/1-hello-world/streamable-http/: client.py  server.py
services/2-calculator/: main.py  pyproject.toml
services/2-calculator/stdio/: client.py
services/2-calculator/streamable-http/: server.py
