[project]
name = "3-inventory-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-projects>=1.0.0b12",
    "azure-identity>=1.23.1",
    "fastmcp>=2.10.6",
    "mcp[cli]>=1.12.1",
    "python-dotenv>=1.1.1",
]
